# Dashboard

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Caddyfile  DESIGN.md  Makefile  PRODUCT.md  README.md  dev.ps1  docker-compose.prod.yml  docker-compose.yml  lancer-dashboard.bat  pyproject.toml  pytest_full.txt  pytest_out.txt
backend/: Dockerfile  README.md  _wise_cols.txt  _wp1.txt  alembic.ini  pyproject.toml  tickers.csv
backend/alembic/: env.py
backend/alembic/versions/: 20260515_0336_cd9aba577b3c_initial_schema.py  20260516_1400_a1b2c3d4e5f6_sante_extend.py  20260517_1000_b2c3d4e5f6a7_entrainement.py  20260525_1000_c3d4e5f6a7b8_agenda.py  20260526_1000_d4e5f6a7b8c9_etudes.py  20260527_1000_e5f6a7b8c9d0_finance.py  20260529_0000_f6a7b8c9d0e1_add_created_at_transaction.py  20260531_1157_0033b95bc1df_add_budget_habitudes_livres_cuisine_.py  20260602_0059_d2f134f7b75c_skincare_module.py  20260603_1155_d69434536a1c_finance_settings.py  (+22 more)
backend/app/: __init__.py  main.py
backend/data/: cache_status.json
backend/docs/: POSTGRES.md
backend/scripts/: .etf_lookthrough_cache.json  add_etfs.py  build_etf_countries_curated.py  classify_etf_sectors.py  enrich_bonnegueule.py  google_oauth_setup.py  import_legacy.py  playlists_excel.py  reorg_garderobe_assets.py  seed_dev.py  seed_mes_livres.py  wait_for_health.py
backend/tests/: conftest.py  test_compare.py  test_cors.py  test_events.py  test_health.py  test_migrations.py  test_openapi_contract.py  test_rate_limit.py  test_secrets.py  test_settings.py  test_wait_for_health.py
(+7177 files in other folders)
