[project]
name = "mission-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Germain", email = "germain.desousa02@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai>=2.41.1",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
