[project]
name = "mission-control-backend"
version = "0.1.0"
description = "Backend FastAPI pour Mission Control (dashboard de vie personnel)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Data / DB
    "sqlmodel>=0.0.22",
    "alembic>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    # Imports legacy
    "pandas>=2.2.0",
    "openpyxl>=3.1.5",
    "python-calamine>=0.4.0",
    # Finance (utilisé en CONV 4 mais installé tout de suite)
    "yfinance>=0.2.50",
    "scipy>=1.14.0",
    "numpy>=2.0.0",
    # Util
    "tzdata>=2024.2",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
